--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nprogress": "^0.2.0",
     "react": "16.14.0",
     "react-dom": "16.14.0",
+    "react-loader-spinner": "^3.1.14",
     "sass": "^1.27.0",
     "swr": "^0.3.5",
     "typescript": "^4.0.3"
