--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-loader-spinner": "^3.1.14",
     "sass": "^1.27.0",
     "swr": "^0.3.5",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "vercel": "^20.1.2"
   }
 }
