--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bulma": "^0.9.1",
     "cookie": "^0.4.1",
     "dotenv": "^8.2.0",
+    "firebase": "^7.24.0",
     "formik": "^2.2.0",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
