--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
     "next": "9.5.5",
+    "next-connect": "^0.9.0",
     "nprogress": "^0.2.0",
     "react": "16.14.0",
     "react-dom": "16.14.0",
