--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.0.0",
     "bulma": "^0.9.1",
     "cookie": "^0.4.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "firebase": "^7.24.0",
     "formik": "^2.2.0",
